# object_3d_reconstruction

./: README.md
Filtering/: CMakeLists.txt  CMakeLists.txt~
Filtering/src/: filtroXZ.cpp
IntegrationPCD/: CMakeLists.txt  mainFINALE.cpp~
IntegrationPCD/src/: integrationBaricentro.cpp  main.cpp~
KinectStream/: CMakeLists.txt~
KinectStream/src/: main.cpp
Meshing/: CMakeLists.txt  meshing.cpp  meshing.cpp~
RemoveNoise/: CMakeLists.txt
RemoveNoise/src/: removeNoise.cpp  removeNoise.cpp~
cloudviewer/: CMakeLists.txt
cloudviewer/src/: cloudViewer.cpp  cloudViewer.cpp~
extractionplane/: CMakeLists.txt
extractionplane/src/: extractionPlane.cpp~
scansioni/sedia+peluche/dopo_filtro/: filter_inputCloud0.pcd  filter_inputCloud1.pcd  filter_inputCloud2.pcd  filter_inputCloud3.pcd  filter_inputCloud4.pcd  filter_inputCloud5.pcd  filter_inputCloud6.pcd  filter_inputCloud7.pcd
scansioni/sedia+peluche/integrazione/: totaleSediaPeluche.pcd
scansioni/sedia+peluche/senza_piano/: noplane_filter_inputCloud0.pcd  noplane_filter_inputCloud1.pcd  noplane_filter_inputCloud2.pcd  noplane_filter_inputCloud3.pcd  noplane_filter_inputCloud4.pcd  noplane_filter_inputCloud5.pcd  noplane_filter_inputCloud6.pcd  noplane_filter_inputCloud7.pcd
scansioni/sedia+peluche/senza_rumore/: noNoise_totaleSediaPeluche.pcd
scansioni/sedia/fusione/: totaleSedia.pcd
scansioni/sedia/senza_piano/: noplaneSedia0.pcd  noplaneSedia1.pcd  noplaneSedia2.pcd  noplaneSedia3.pcd  noplaneSedia4.pcd  noplaneSedia5.pcd  noplaneSedia6.pcd  noplaneSedia7.pcd
scansioni/sedia/senza_rumore/: noNoise_totaleSedia.pcd
scansioni/sediaLegno/dopo_filtro/: filter_inputCloud0.pcd  filter_inputCloud1.pcd  filter_inputCloud2.pcd  filter_inputCloud3.pcd  filter_inputCloud4.pcd  filter_inputCloud5.pcd  filter_inputCloud6.pcd  filter_inputCloud7.pcd
scansioni/sediaLegno/fusione/: totaleSediaLegno.pcd
scansioni/sediaLegno/senza_piano/: noplane_filter_inputCloud0.pcd  (+7 more)
(+19 files in other folders)
